# fastapi-docker-stack

./: .dockerignore  .env.dev  .env.example  .env.prod  .env.template  .flake8  .gitignore  AGENTIC_GEN.MD  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  DEBUG_SETUP.md  DEPLOYMENT_SUMMARY.md  DEPLOY_NOW.md  Dockerfile  Dockerfile.debug  Dockerfile.legacy  ENVIRONMENT-CONFIG.md  FAQ.md  FRONTEND.md  FRONTENDCLAUDE.md  FRONTENDGEMINI.md  FRONTEND_TEST_LOG.md  GOOD_FIRST_ISSUES.md  LICENSE  NPM_SETUP.md  POC_PLAN.md  PORT_GUIDE.md  README.md  REPOSITORY_SETUP.md  ROADMAP.md  SECURITY.md  SOCIAL.md  UPDATES.md  VALIDATION_REPORT.md  VSCODEHOWTO.md  VirtualBox.md  check_cache.py  create_tables.sql  database-setup-environments.sql  (+40 more)
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  documentation.md  feature_request.md  feature_request.yml  question.md
.github/workflows/: ci.yml  release.yml
app/: __init__.py  main.py  main_fixed.py
app/core/: config.py
app/routes/: __init__.py  ai.py  general.py
app/services/: cache_service.py  database_service.py  (+7 more)
dashboard/: api.py  index.html  status.html
frontendclaude/: README.md  main.py  requirements.txt
frontendgemini/: main.py  ui.py
mcp-inspector/: Dockerfile
mongo-config/: setup.js  setup.sh
nginx/: nginx.conf
pgadmin-config/: pgpass  servers.json  setup.sh
scripts/: Dockerfile.beszel-setup  Dockerfile.npm-setup  beszel-auto-setup.py  heimdall-auto-setup.py  npm-auto-setup.py  npm-simple-setup.py  setup-beszel.py  setup-npm-hosts.sh
system-monitor/: Dockerfile.api  about.html  api.py  database-credentials.html  index.html  status.html
tests/: __init__.py  config.py  quick_test.py  test_01_containers_health.py  test_02_database_pgvector.py  test_03_openrouter_integration.py  test_04_minio_storage.py  test_05_redis_cache.py  test_06_end_to_end.py  test_both_ports.py  test_vector_with_book.py
(+19 files in other folders)
